--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@react-three/drei": "^7.0.2",
     "@react-three/fiber": "^7.0.1",
+    "@react-three/postprocessing": "^2.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "three": "^0.129.0"
+    "three": "0.132.2",
+    "postprocessing": "6.22.5"
   },
   "scripts": {
     "start": "react-scripts start",
