--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@react-three/drei": "^7.0.2",
     "@react-three/fiber": "^7.0.1",
     "@react-three/postprocessing": "^2.0.5",
+    "gsap": "^3.9.0",
+    "postprocessing": "6.22.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "three": "0.132.2",
-    "postprocessing": "6.22.5"
+    "three": "0.132.2"
   },
   "scripts": {
     "start": "react-scripts start",
